# mdfind.py

./: README.md  setup.cfg  setup.py
mdfind/: __init__.py
tests/mdfind/examples/count/: name.py  query.py
tests/mdfind/examples/mdfind/: example.py
tests/mdfind/examples/name/: example.py
tests/mdfind/examples/query/: kMDItemContentType.py
