# https://pypi.org/project/setupcfg-generator/
[metadata]
name = mdfind
version = 2019.4.13
url = https://github.com/looking-for-a-job/mdfind.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = mdfind

[options]
install_requires = 
	public
	runcmd
	setuptools
	values
packages = 
	mdfind
